--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,21 +1,12 @@
-body {
-  font-family: "Quicksand", sans-serif;
-  font-size: 15px;
-  line-height: 1.3;
-  color: #fff;
-  background-color: #fff;
-  margin: 0px;
-}
-
 nav {
     display: flex;
-    background-color: #fff;
-    box-shadow: 10px;
+    background-color: none;
+    box-shadow: 0px 0px 15px #00000014;
 }
 
 .etmn-logo {
     width: 60px;
-    padding-left: 60px;
+    margin-left: 60px;
 }
 
 ul {
@@ -45,7 +36,7 @@ li {
 }
 
 a {
-  color: #000000;
+  color: #fff;
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: .25em;
@@ -68,11 +59,11 @@ a::after {
   bottom: 0;
   content: "";
   display: block;
-  height: 4px;
+  height: 1px;
   right: 0;
   position: absolute;
-  background: linear-gradient(to left, #f69ec4, #f9dd94 100%);
-  transition: width .5s ease 0s, right .5s ease 0s;
+  background: white;
+  transition: width .25s ease 0s, right .25s ease 0s;
   width: 0;
 }
 
@@ -86,7 +77,7 @@ a::after {
     top: 35px;
     width: 100%;
     padding: 0;
-    background-color: #fff;
+    background-color: none;
     opacity: 0;
     visibility: hidden;
     transform: translateY(50px);
