--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,7 +1,6 @@
 nav {
     display: flex;
     background-color: none;
-    box-shadow: 0px 0px 15px #00000014;
 }
 
 .etmn-logo {
@@ -43,6 +42,7 @@ a {
   display: inline-block;
   padding: 15px;
   position: relative;
+    font-weight: 600;
 }
 
 a:hover::after {
