--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Quicksand", sans-serif;
     font-size: 15px;
@@ -7,64 +11,45 @@ body {
     margin: 0px;
 }
 
-button {
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
-}
-
 .button {
-    margin: 50px auto;
-    letter-spacing: 1px;
-    border: 1px solid white;
-    color: white;
-    display: inline-block;
-    line-height: 100%;
-    position: relative;
-    text-decoration: none;
-    z-index: 0;
-    -webkit-transition: border-color .35s ease, background .35s ease;
-    transition: border-color .35s ease, background .35s ease;
+  margin: 50px auto;
+  padding: 0.9375rem 1.875rem;
+  letter-spacing: 1px;
+  border: 1px solid white;
+  color: white;
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+  overflow: hidden;
+  z-index: 0;
+  background: transparent;
+  cursor: pointer;
+  transition: color 0.35s ease;
 }
 
-.button:before {
-    background-color: white;
-    content: "";
-    display: block;
-    position: absolute;
-    top: 100%;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-    -webkit-transition: all .35s ease;
-    transition: all .35s ease;
+.button::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100vw;
+  background-color: white;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: transform 0.35s ease;
+  z-index: -1;
 }
 
-.button:hover:before {
-    top: 0;
+.button:hover::before {
+  transform: scaleY(1);
+  transform-origin: bottom;
 }
 
-.button:hover{
-    color:#000000;
-    transition:0.25s;
+.button:hover {
+  color: black;
 }
 
-.button:after {
-    position: absolute;
-    right: 2.34375rem;
-    top: 50%;
-    -webkit-transform: translateY(-50%) translateX(50%);
-    -ms-transform: translateY(-50%) translateX(50%);
-    transform: translateY(-50%) translateX(50%);
-    font-size: 1.75em;
-}
 
-.button {
-    padding: .9375rem 1.875rem;
-}
+
 
