fix: fixed logo underline animation

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -50,8 +50,8 @@ a:hover::after {
   transform-origin: left;
 }
 .navbar-logo:hover::after {
-    width: 0%;
-    right: 0;
+  transform: scaleX(0);
+  transform-origin: left;
 }
 
 a::after {
