--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -1,23 +1,27 @@
 .hero{
-    top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
     height: 100vh;
+    overflow: hidden;
 }
 
 .landing_image {
-    position: absolute;
-    width: 100%;
-    height: auto;
-    top: 0;
-    left: 0;
-    z-index: -1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the image covers the area, cropping as necessary */
+  object-position: center; /* Keeps the center of the image in view */
+  transform: translate(-50%, -50%); /* Centers the image */
+  z-index: -1;
 }
 
 .test {
     font-size: 100px;
     font-weight: 7;
-    top: -65px;
+    top: -91px;
 }
 
