--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -8,7 +8,7 @@ nav {
     margin-left: 60px;
 }
 
-ul {
+nav ul {
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -22,19 +22,19 @@ ul {
 
 
 @media screen and (min-width: 600px) {
-    ul {
+    nav ul {
         flex-direction: row;
     }
 }
 
-li {
+nav li {
   position: relative;
   padding-left: 30px;
   padding-right: 30px;
   margin-top: 4px;
 }
 
-a {
+nav a {
   color: #fff;
   text-transform: uppercase;
   text-decoration: none;
@@ -45,7 +45,7 @@ a {
     font-weight: 600;
 }
 
-a:hover::after {
+nav a:hover::after {
   transform: scaleX(1);
   transform-origin: left;
 }
@@ -54,7 +54,7 @@ a:hover::after {
   transform-origin: left;
 }
 
-a::after {
+nav a::after {
   content: "";
   position: absolute;
   left: 0;
